# architecture-analysis

./: .gitignore  README.md  churn.json  evolution_metrics.py  flake.nix  main.py  module_churn.json  pyproject.toml
