[project]
name = "analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.47",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
]
